--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </ul>
         </div>
     </header>
-    <main id="main">
+    <main class="main">
         <section class="hero">
             <div class="container">
                 <div class="hero__row row">
