--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
     <header class="header">
         <div class="header__container container">
             <h3 class="header__logo">Agency</h3>
-            <ul class="header__list">
-                <li class="header__item">About</li>
-                <li class="header__item">Portfolio</li>
-                <li class="header__item">Contact</li>
+            <nav class="nav">
+            <ul class="nav__list">
+                <li class="nav__item">About</li>
+                <li class="nav__item">Portfolio</li>
+                <li class="nav__item">Contact</li>
             </ul>
+            </nav>
+            <div class="burger__menu">
+                <span></span>
+              </div>
         </div>
     </header>
     <main class="main">
@@ -189,7 +194,7 @@
                         <div class="portfolio__col-7 col-7">
                             <img src="./image/brand.png" alt="brand">
                             <h3 class="portfolio__suptitle">Branding</h3>
-                            <h2 class="portfolio__title-black">Amazing<br>Startup</h2>
+                            <h2 class="portfolio__title-black portfolio__title-white">Amazing<br>Startup</h2>
                         </div>
                     </div>
                     <button class="btn-pink">Load more</button>
@@ -204,8 +209,8 @@
                         <h3 class="clients__suptitle">Testimonials</h3>
                     </div>
                     <div class="col-7">
-                        <div class="features__wrapper">
-                            <div class="features__item" style="min-width: 470px">
+                        <div class="clients__wrapper">
+                            <div class="clients__item" style="min-width: 470px">
                                 <div class="clients__inner">
                                     <img src="./image/sharlota.png" alt="apple inc" class="inner__image">
                                     <div class="clients__info">
