--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 
 <body>
     <header class="header">
-        <div class="header__container container">
+        <div class=" container">
             <h3 class="header__logo">Agency</h3>
             <nav class="nav">
-            <ul class="nav__list">
-                <li class="nav__item">About</li>
-                <li class="nav__item">Portfolio</li>
-                <li class="nav__item">Contact</li>
-            </ul>
+                <ul class="nav__list">
+                    <li class="nav__item">About</li>
+                    <li class="nav__item">Portfolio</li>
+                    <li class="nav__item">Contact</li>
+                </ul>
             </nav>
             <div class="burger__menu">
                 <span></span>
-              </div>
+            </div>
         </div>
     </header>
     <main class="main">
@@ -367,6 +367,6 @@
     <script src="./js/jquery-3.5.1.min.js"></script>
     <script src="./js/slick.min.js"></script>
     <script src="./js/index.js"></script>
-    </body>
+</body>
 
 </html>
