--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header class="header">
-        <div class=" container">
+        <div class="container">
             <h3 class="header__logo">Agency</h3>
             <nav class="nav">
                 <ul class="nav__list">
@@ -216,6 +216,36 @@
                                     <div class="clients__info">
                                         <h3 class="inner__name">Helena Brauer</h3>
                                         <span class="inner__info">Apple Inc.</span>
+                                    </div>
+                                </div>
+                                <p class="inner__description">What looked like a small patch of purple grass, above five
+                                    feet
+                                    square, was moving across the sand in their direction. When it came near enough he
+                                    perceived that it was not grass; there were no blades, but only purple roots. The
+                                    roots were revolving, for each small plant in the whole patch, like the spokes of a
+                                    rimless wheel.</p>
+                            </div>
+                            <div class="features__item" style="min-width: 470px">
+                                <div class="clients__inner">
+                                    <img src="./image/kay.png" alt="microsoft" class="inner__image">
+                                    <div class="clients__info">
+                                        <h3 class="inner__name">Kay Totleben</h3>
+                                        <span class="inner__info">Microsoft</span>
+                                    </div>
+                                </div>
+                                <p class="inner__description">What looked like a small patch of purple grass, above five
+                                    feet
+                                    square, was moving across the sand in their direction. When it came near enough he
+                                    perceived that it was not grass; there were no blades, but only purple roots. The
+                                    roots were revolving, for each small plant in the whole patch, like the spokes of a
+                                    rimless wheel.</p>
+                            </div>
+                            <div class="features__item" style="min-width: 470px">
+                                <div class="clients__inner">
+                                    <img src="./image/kay.png" alt="microsoft" class="inner__image">
+                                    <div class="clients__info">
+                                        <h3 class="inner__name">Kay Totleben</h3>
+                                        <span class="inner__info">Microsoft</span>
                                     </div>
                                 </div>
                                 <p class="inner__description">What looked like a small patch of purple grass, above five
